--- a/css/style.css
+++ b/css/style.css
@@ -174,13 +174,15 @@ h6 {
 
 .wrapper {
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
 /*  display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+ 
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column;*/
+          */
   overflow: hidden;  
   width: 100%;
 }
