--- a/css/style.css
+++ b/css/style.css
@@ -2655,9 +2655,12 @@ h6 {
     font-size: 16px;
     line-height: 24px;
   }
-
+  .items-item__text:last-child {
+    margin-top: 0;
+  }
   .items-item-btn {
     width: 100%;
+    height: 56px;
     border-radius: 72px; 
   }
   .items-item-btn a {
@@ -2769,6 +2772,7 @@ h6 {
     font-weight: 600;
     font-size: 12px;
     line-height: 15px;
+    text-transform: none;
   }
 
   .header__btns {
@@ -2785,7 +2789,9 @@ h6 {
   .footer__box {
     padding-top: 0;
   }
-
+  .header__logo-img a img {
+    margin-left: 24px;
+  }
   .footer__form {
     display: block;
     padding-bottom: 69px;
@@ -2817,6 +2823,7 @@ h6 {
   }
   .footer__logo {
     margin-bottom: 55px;
+    justify-content: center;
   }
 
   .footer__btn-main {
@@ -2833,6 +2840,10 @@ h6 {
   }
   .footer__list:last-child {
     margin-top: 46px;
+  }
+  .footer__form-text {
+    font-size: 20px;
+    line-height: 28px; 
   }
   .title {
     line-height: 44px;
@@ -2881,7 +2892,6 @@ h6 {
     margin-top: 0;
   }
   .why__btn {
-    height: inherit;
     margin: 40px 0;
     padding: 18px 24px;
     font-size: 16px;
@@ -2923,7 +2933,9 @@ h6 {
   .item-list-title {
     font-size: 16px;
   }
-
+  .items-item-btn a {
+    align-content: center;
+  }
   .progress__slider {
     height: 364px;
   }
