--- a/css/style.css
+++ b/css/style.css
@@ -1077,22 +1077,18 @@ h6 {
 .car {
   padding: 56px 0;
   border-top: 1px solid #4A4A4A;
-/*  display: -webkit-box;
-  display: -ms-flexbox; */
   display: flex;
   gap: 10px;
   justify-content: space-between;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-         
+      -ms-flex-pack: justify;         
 }
 
 .car__content {
   max-width: 526px; 
   width: 100%;
   display: grid;
-  align-content: space-between;
-  
+  align-content: space-between;  
 }
 
 .car__title {
@@ -1322,12 +1318,6 @@ h6 {
   margin-bottom: 0;
 }
 
-.items-item__text:hover {
-  -webkit-transform: scale(1.01);
-      -ms-transform: scale(1.01);
-          transform: scale(1.01);
-}
-
 .items-item-btn {
   background-color: #fff;
   border: 1px solid #1A1A1A;
@@ -1513,7 +1503,10 @@ h6 {
     padding-bottom: calc(4rem + 3.75 * (100vw - 20rem) / 55);
   }
 }
-
+.donat__grid {
+  display: flex;
+  flex-wrap: wrap;  
+}
 .donat-tabs__navigation {
   width: 100%;
   display: -ms-grid;
@@ -2258,7 +2251,7 @@ h6 {
   width: 60px;
   height: 30px;
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 0;
 }
 .vacancy__item:hover .partner__item-hyundai::before {
@@ -2267,7 +2260,7 @@ h6 {
   width: 60px;
   height: 30px;
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 0;
 }
 
@@ -2306,7 +2299,7 @@ h6 {
   width: 62px;
   height: 48px;
   position: absolute;
-  top: 0;
+  top: -5px;
   left: 0;
 }
 
@@ -2326,7 +2319,7 @@ h6 {
   width: 94px;
   height: 35px;
   position: absolute;
-  top: 0;
+  top: 2px;
   left: 0;
 }
 .partner__item-ford::before {
@@ -2334,7 +2327,7 @@ h6 {
   width: 94px;
   height: 35px;
   position: absolute;
-  top: 0;
+  top: 2px;
   left: 0;
 }
 
@@ -2351,7 +2344,7 @@ h6 {
   width: 55px;
   height: 55px;
   position: absolute;
-  top: 0;
+  top: -10px;
   left: 0;
 }
 
@@ -2963,15 +2956,13 @@ h6 {
     font-size: 16px;
     line-height: 20px;
   }
-  .donat__box {
-    padding-top: 209px;
-    position: relative;
+ 
+  .donat-title {  
+    margin-bottom: 40px;
   }
-  .donat-title {
-    position: absolute;
-    top: 64px;
+  .donat__grid {    
+    flex-wrap: wrap-reverse;
   }
-
   .tab__card {
     padding: 28px 16px;
   }
