--- a/css/style.css
+++ b/css/style.css
@@ -331,10 +331,6 @@ h6 {
   color: #4A4A4A;
 }
 
-.input:focus {
-  border-color: #fff;
-  color: #fff;
-}
 
 .contact-item__input:focus {
   color: #3C59F0;
@@ -388,7 +384,7 @@ h6 {
   border-bottom: 1px solid #fff;
 }
 
-.header__logo {
+.header__logo { 
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -410,7 +406,7 @@ h6 {
 }
 
 .header__logo-text {
-  width: 9.5625rem;
+  width: 181px;
   margin-left: 0.875rem;
   font-weight: 600;
   font-size: 1rem;
@@ -520,7 +516,7 @@ h6 {
 }
 
 .footer__logo-text {
-  width: 12.75rem;
+  width: 277px;
   margin-left: 1.5625rem;
   font-weight: 600;
   font-size: 1.5rem;
@@ -1623,7 +1619,7 @@ h6 {
   color: #A9A9A9;
 }
 
-.modal {
+.modal, .modalsocial {
   position: fixed;
   top: 0;
   left: 0;
@@ -1635,6 +1631,7 @@ h6 {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+
 .modal__wrapper {
   max-width: 1076px;
   margin: 40px auto;
@@ -1643,14 +1640,16 @@ h6 {
   border-radius: 24px;
   position: relative;
 }
-
+.wrapper-social {
+  padding: 128px 144px 88px 142px;
+}
 .modal__content {
   width: 100%;
   padding: 40px;
   overflow-y: auto;
 }
 
-.modal__close {
+.modal__close, .modal__close-social {
   position: absolute;
   top: 8px;
   right: 14px;
@@ -1694,7 +1693,48 @@ h6 {
 .hide {
   display: none;
 }
-
+.modalsocial__title {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 37px;
+}
+.modalsocial__link {
+  margin-top: 68px;
+  padding-left: 56px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 37px;
+  color: #3C59F0;
+  position: relative;
+  cursor: pointer;
+}
+.modalsocial__link::before {
+  content: '';
+  background-image: url("../img/link.webp");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 36px;
+  height: 37px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.modal__social {
+  margin-top: 68px;
+}
+.modal__social-title {
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 37px;
+}
+.modal__social-items {
+  display: flex;
+  justify-content: space-between;
+}
+.modal__social-items a {
+  display: block;
+}
 .header-page {
   z-index: 2;
   color: #1A1A1A;
