--- a/css/style.css
+++ b/css/style.css
@@ -2760,7 +2760,9 @@ h6 {
     font-size: 24px;
     line-height: 29px;
   }
-
+  .contact-form__item {
+    font-size: 16px;
+  }
   .contact-item__input {
     padding: 12px 20px;
   }
